fixed spacing of directions

--- a/Game/style.css
+++ b/Game/style.css
@@ -76,7 +76,7 @@ canvas{
 
 .directions{
   display: block;
-  margin-top: 150px;
+  margin-top: 200px;
 }
 
 .footer p{
